--- a/02-html-widget/01-button.html
+++ b/02-html-widget/01-button.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="01-button.css">
+  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="01-button.js"></script>
   <title></title>
 </head>
