--- a/02-html-widget/02-password.html
+++ b/02-html-widget/02-password.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="02-password.css">
-  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="//apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="02-password.js"></script>
   <title></title>
 </head>
