--- a/02-html-widget/01-button.html
+++ b/02-html-widget/01-button.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="01-button.css">
   <script src="//apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="01-button.js"></script>
-  <title></title>
+  <title>定时器按钮</title>
 </head>
 <body>
 <div class="btn"> 
