--- a/02-html-widget/02-password.html
+++ b/02-html-widget/02-password.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="02-password.css">
   <script src="//apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="02-password.js"></script>
-  <title></title>
+  <title>密码可见</title>
 </head>
 <body>
   <form action="">
