--- a/02-html-widget/03-range.html
+++ b/02-html-widget/03-range.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="03-range.css">
   <script src="//apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="03-range.js"></script>
-  <title></title>
+  <title>进度条</title>
 </head>
 <body>
   <div class="box">
