--- a/03-validation/01-field-validation.html
+++ b/03-validation/01-field-validation.html
@@ -7,18 +7,18 @@
   <link rel="stylesheet" href="01-field-validation.css">
   <script src="01-field-validation.js"></script>
   <script src="//apps.bding.com/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <!-- <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script> -->
 </head>
 <body>
 <div class="rectangle">
   <label for="">长度：</label>
   <input id="rectangle-width" type="text" autofocus>
   <span class="col">*</span>
-  <div id="wid"></div>
+  <div id="rectangle-width-validate"></div>
   <label for="">宽度：</label>
   <input id="rectangle-height" type="text">
   <span class="col">*</span>
-  <div id="hei"></div> 
+  <div id="rectangle-height-validate"></div> 
   <input id="rectangle-calc" type="button" value="计算">
   <br>
   <label for="">面积：</label>
