--- a/03-validation/03-form-validation.html
+++ b/03-validation/03-form-validation.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>rectangle</title>
-  <link rel="stylesheet" href="01-char-validation.css">
+  <link rel="stylesheet" href="03-form-validation.css">
   <script src="jquery.min.js"></script>
 </head>
 <body>
@@ -25,6 +25,6 @@
   <label for="">周长：</label>
   <input id="rectangle-p" type="text" disabled>
 </div>
-<script src="01-char-validation.js"></script>
+<script src="03-form-validation.js"></script>
 </body>
 </html>
