--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <div>
-        矩形计算器：<a href="https://marionettess.github.io/spa/01-first-app/index.html" target="_blank">https://marionettess.github.io/spa/01-first-app/index.html</a><br>
-        定时器按钮: <a href="https://marionettess.github.io/spa/02-html-widget/01-button.html" target="_blank">https://marionettess.github.io/spa/02-html-widget/01-button.html</a><br>
-        密码可见: <a href="https://marionettess.github.io/spa/02-html-widget/02-password.html" target="_blank">https://marionettess.github.io/spa/02-html-widget/02-password.html</a><br>
-        进度条: <a href="https://marionettess.github.io/spa/02-html-widget/03-range.html" target="_blank">https://marionettess.github.io/spa/02-html-widget/03-range.html</a><br>
+        矩形计算器：<a href="https://marionettess.github.io/spa/01-first-app/index.html">https://marionettess.github.io/spa/01-first-app/index.html</a><br>
+        定时器按钮: <a href="https://marionettess.github.io/spa/02-html-widget/01-button.html">https://marionettess.github.io/spa/02-html-widget/01-button.html</a><br>
+        密码可见: <a href="https://marionettess.github.io/spa/02-html-widget/02-password.html">https://marionettess.github.io/spa/02-html-widget/02-password.html</a><br>
+        进度条: <a href="https://marionettess.github.io/spa/02-html-widget/03-range.html">https://marionettess.github.io/spa/02-html-widget/03-range.html</a><br>
+        字段验证：<a href="https://marionettess.github.io/spa/03-validation/01-field-validation.html">https://marionettess.github.io/spa/03-validation/01-field-validation.html</a><br>
+        字符验证：<a href="https://marionettess.github.io/spa/03-validation/02-char-validation.html">https://marionettess.github.io/spa/03-validation/02-char-validation.html</a><br>
+        表单验证：<a href="https://marionettess.github.io/spa/03-validation/03-form-validation.html">https://marionettess.github.io/spa/03-validation/03-form-validation.html</a><br>
+        H5验证：<a href="https://marionettess.github.io/spa/03-validation/04-h5-validation.html">https://marionettess.github.io/spa/03-validation/04-h5-validation.html</a><br>
     </div>
 </body>
 </html>
