--- a/05-ui-component/01-password.html
+++ b/05-ui-component/01-password.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="01-button.css">
+    <link rel="stylesheet" href="01-password.css">
     <title>Document</title>
 </head>
 <body>
     <div class="main">
-        <input type="button">
+        密码：
+        <input id="pwd" type="password" autofocus>
+        <div id="eye"></div> 
+        <input class="pwd-text">
     </div>
     <script src="jquery.min.js"></script>
-    <script src="01-button.js"></script>
+    <script src="01-password.js"></script>
 </body>
 </html>
